apps/rhf-mui-docs/src/app/v2/components/mui/RHFPasswordInput/page.mdx
import { DocsPage, PropsTable } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFPasswordInput;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFPasswordInput

**RHFPasswordInput** extends the [TextField](https://v6.mui.com/material-ui/react-text-field/)
component, designed specifically for password input on signup and login pages.
This component allows users to toggle password visibility,
offering a more user-friendly experience when entering credentials.

## Usage

```tsx
import RHFPasswordInput, { RHFPasswordInputProps } from '@nish1896/rhf-mui-components/mui/password-input';
```

`RHFPasswordInput` also requires just 3-4 essential props to render a fully functional field.

```tsx
<RHFPasswordInput
  fieldName="password"
  control={control}
  errorMessage={errors?.password?.message}
/>
```

## API

The `RHFPasswordInputProps` interface extends [TextFieldProps](https://v6.mui.com/material-ui/api/text-field/)
and includes additional options for password handling and input customization.

<PropsTable
  rows={componentProps.RHFPasswordInput}
  docsVersion={2}
  muiVersion={6}
/>
