apps/rhf-mui-docs/src/app/v3/components/mui/RHFPasswordInput/page.mdx
import { DocsPage, PropsTable, ComponentSourceLink } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFPasswordInput;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFPasswordInput

**RHFPasswordInput** extends the [TextField](https://v7.mui.com/material-ui/react-text-field/)
component, designed specifically for password input on signup and login pages.
This component allows users to toggle password visibility,
offering a more user-friendly experience when entering credentials.

## Usage

```tsx
import RHFPasswordInput, { RHFPasswordInputProps } from '@nish1896/rhf-mui-components/mui/password-input';
```

`RHFPasswordInput` also requires just 3-4 essential props to render a fully functional field.

```tsx
<RHFPasswordInput
  fieldName="password"
  control={control}
  errorMessage={errors?.password?.message}
/>
```

## Examples
- [RHFPasswordInput](https://rhf-mui-components-examples.vercel.app/inputs)
- [TextField with Input Adornment](https://v7.mui.com/material-ui/react-text-field/#input-adornments)
- [Complete Form](https://rhf-mui-components-examples.vercel.app/complete-form)

## API

The `RHFPasswordInputProps` interface extends [TextFieldProps](https://v7.mui.com/material-ui/api/text-field/)
and includes additional options for password handling and input customization.

<PropsTable
  rows={componentProps.RHFPasswordInput}
  docsVersion={3}
  muiVersion={7}
  v3AndAbove
/>

## Source Code

<ComponentSourceLink
  path="mui/password-input"
  docsVersion={3}
/>
